6714406: Node::dominates() does not always check for TOP

Add missed checks for TOP and missed checks for non-dominating cases

Reviewed-by: rasbold, jrose, never